<resources>
    <string name="app_name">Projeto de Web Service</string>
    <string name="get_name">Denuncias</string>
    <string name="set_name">Campo de envio</string>
    <string name="icon">icon</string>
    <string name="denId">Id da denuncia</string>
    <string name="espId">Ver específica</string>
    <string name="allId">Ver todas</string>
    <string name="getMain">veja aqui as denuncias feitas pelos usuarios</string>
    <string name="postMain">Por favor informe sua denuncia abaixo, todos os campos são obrigatorios</string>
    <string name="postEst">Sigla do estado</string>
    <string name="postCid">Nome da cidade</string>
    <string name="postEnd">Endereço</string>
    <string name="postDesc">Descrição</string>
    <string name="postSend">Enviar</string>
    <string name="mainAD">Adicionar Denuncia</string>
    <string name="mainLR">Listar Registros</string>
    <string name="cc">"Icone feito por freepik.com de flaticon.com é licenciado por CC 3.0 BY"</string>
    <string name="hello">Temos que cuidar do nosso planeta,\npor isso criamos esse aplicativo.\nCom ele você pode denunciar pontos de poluição na sua cidade"</string>

</resources>
