<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tgr.wservice.PostActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postMain"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/postEst"
        android:id="@+id/estadoPutV"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/postCid"
        android:id="@+id/cidadePutV"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/postEnd"
        android:id="@+id/locPutV"
        android:layout_weight="0.25"
        android:gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/postDesc"
        android:id="@+id/descPutV"
        android:layout_weight="0.5"
        android:gravity="start"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/postSend"
        android:onClick="retrieve"/>

</LinearLayout>
