<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="30dp"
    tools:context="com.tgr.wservice.Menu">

    <ImageView
        android:id="@+id/home"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/icon"
        android:src="@drawable/home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/cc" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/cc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="Send"
        android:text="@string/mainAD" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="Get"
        android:text="@string/mainLR" />


</RelativeLayout>
